--- a/ShelfCrawler/src/main/resources/application.properties
+++ b/ShelfCrawler/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/project
+spring.datasource.username=root
+spring.datasource.password=admin
 
+spring.data.rest.base-path=/api
