--- a/ShelfCrawler/src/main/resources/application.properties
+++ b/ShelfCrawler/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=admin
 
 spring.data.rest.base-path=/api
+
+spring.datasource.initialization-mode=always
