--- a/ShelfCrawler/src/main/resources/application.properties
+++ b/ShelfCrawler/src/main/resources/application.properties
@@ -1,7 +1,17 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/project
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=ENC(XuH14JnD5H61dR0K8C3rXQ==)
+spring.datasource.password=ENC(JC4dUkF7CsqRux1Qyp9Xbg==)
 
-spring.data.rest.base-path=/api
+#spring.data.rest.base-path=/api
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ENC(lolNGlIQdK6UZcx4cLLnLQ==)
+spring.mail.password=ENC(ZNOndJt4n794sc5IX/uFWH9CBKcfwKmlJZt85qtqm3U=)
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
