added update bookshelf item

--- a/ShelfCrawler/src/main/resources/application.properties
+++ b/ShelfCrawler/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/project
 spring.datasource.username=ENC(XuH14JnD5H61dR0K8C3rXQ==)
 spring.datasource.password=ENC(JC4dUkF7CsqRux1Qyp9Xbg==)
 
-#spring.data.rest.base-path=/api
+spring.data.rest.base-path=/api
 spring.datasource.platform=mysql
 spring.datasource.initialization-mode=always
 
